# project2-_Kuhtov-Nikolay-M25-555

./: .gitignore  README.md  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  parser.py  utils.py
