[tool.poetry]
name = "project2-kuhtov-nikolay-m25-555"
version = "0.1.0"
description = "simple database"
authors = ["DuZZlo nickuhtov@gmail.com"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"